# RustPanel

./: .cnb.yml  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/rustpanel-cli/: Cargo.toml
crates/rustpanel-cli/src/: main.rs
crates/rustpanel-core/: Cargo.toml
crates/rustpanel-core/src/: app.rs  lib.rs  nginx.rs  paths.rs  systemd.rs
crates/rustpanel-helper/: Cargo.toml
crates/rustpanel-helper/src/: main.rs
crates/rustpaneld/: Cargo.toml
crates/rustpaneld/src/: auth.rs  config.rs  handlers.rs  i18n.rs  main.rs  privileged.rs  processes.rs  services.rs  sites.rs  ssl.rs  state.rs  system_metrics.rs  templates.rs  updates.rs  web.rs
docs/: DEPLOYMENT.md
scripts/: bootstrap-linux.sh  install-binary-linux.sh  install-linux.sh
