[workspace]
members = [
    "crates/rustpanel-core",
    "crates/rustpaneld",
    "crates/rustpanel-helper",
    "crates/rustpanel-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.9"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
askama = "0.14"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
