[package]
name = "rustpaneld"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
askama.workspace = true
axum.workspace = true
rustpanel-core = { path = "../rustpanel-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
